done some changes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="description" content="Meghna One page parallax responsive HTML Template ">
+	<meta name="description" content="Samarth One page parallax responsive HTML Template ">
 
-	<meta name="author" content="Muhammad Morshed">
+	<meta name="author" content="Samartha">
 
 	<title>
 		Samarth Portfolio
@@ -68,17 +68,17 @@
 Welcome Slider
 ==================================== -->
 
-<section class="hero-area overlay" style="background-image: url('images/banner/imageedit_1_9916176365.jpg');">
+<section class="hero-area overlay" style="background-image: url('./images/pexels-aleksandar-pasaric-325185.jpg');">
 	<!-- <video autoplay muted loop class="hero-video">
 		<source src="images/banner/hero-video.mp4" type="video/mp4">
 	</video> -->
-	<div class="block">
+	<div class="block"  >
 		<h2> Hello World</h2>
 		<h1>I'm Samarth Jadhao</h1>
 		<!-- <h2>CS undergrad</h2> -->
 		<!-- <h2>Competitive Programmer</h2> -->
 
-		<a data-scroll href="#about" class="btn btn-transparent">Explore Me</a>
+		<!-- <a data-scroll href="#about" class="btn btn-transparent">Explore Me</a> -->
 	</div>
 	
 </section>
@@ -101,8 +101,7 @@ Welcome Slider
                 <!-- /responsive nav button -->
     
                 <!-- logo -->
-                <a class="navbar-brand logo" href="#body">
-                    <!-- <img src="images/logo.png" alt="Website Logo" /> -->
+                <a class="navbar-brand " href="#body">
                     <svg width="40px" height="40px" viewBox="0 0 45 44" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                             <g id="Group" transform="translate(2.000000, 2.000000)" stroke="#57CBCC" stroke-width="3">
@@ -487,7 +486,7 @@ Welcome Slider
 				<div class="title text-center">
 					<h2>My<span class="color"> Projects</span></h2>
 					<div class="border"></div>
-				</div> --> -->
+				</div> --> 
 				<!-- /section title -->
 			<!-- </div>  
 		</div> -->
@@ -667,7 +666,7 @@ Start Our Team
 					<div class="member-meta">
 						<h2>Remote Code Executer</h2>
 						<h5>
-							<span>A online IDE</span>
+							<span>An online IDE</span>
 						</h5>
 						<h4>
 								<li>Implemented a Docker based sandbox environment to compile/run
@@ -937,7 +936,7 @@ Start Our Team
 			
 			<!-- section title -->
 			<div class="title text-center wow fadeIn" data-wow-duration="500ms">
-				<h2><span class="color">Contact Me</span></h2>
+				<h2>Contact<span class="color"> Me</span></h2>
 				<div class="border"></div>
 			</div>
 			<!-- /section title -->
