--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ Welcome Slider
 		<source src="images/banner/hero-video.mp4" type="video/mp4">
 	</video> -->
 	<div class="block"  >
-		<h2> Hello World</h2>
-		<h1>I'm Samarth Jadhao</h1>
+		<h2> Hello!</h2>
+		<h1>I'm Samartha </h1>
 		<!-- <h2>CS undergrad</h2> -->
 		<!-- <h2>Competitive Programmer</h2> -->
 
@@ -148,15 +148,15 @@ Welcome Slider
 						<h2>About <span class="color">Me</span> </h2>
 						<div class="border"></div>
 					</div>
-					<class  class="content text-center">
-						<h2>
+					<class  class="content text-center" >
+						<h2 style="font-size : 25px;">
 							I am a software engineer pursuing Computer Science and Engineering
 							at <span class ="color">Indian Institute of Information Technology(IIIT), Gwalior.</span>
 							I love Competitive Programming and building Web Applications(MERN-Stack).I was always
 							passionate about building websites and Mathematics.
 							I love solving exciting Algorithmic and Engineering problems.
 						</h2>
-						<h2>
+						<h2 style="font-size : 25px;">
 							I have secured many Good ranks in various Competitive Programming Contests.
 							I usually go by <span class="color">Samarth5611</span> on various Competitive Programming platforms.
 						</h2>
@@ -181,7 +181,7 @@ Welcome Slider
 								<img src="https://api.iconify.design/la/hackerrank.svg" data-target="blank" height="63">
 							</a>
 						</div>
-						<h2>
+						<h2 style="font-size : 25px;">
 							I have built several Web Applications based projects.I love to explore latest Technologies, design cool Stuff
 							and spend my time working on intresting projects.I usually like to work with <span class="color">MERN Stack</span>. Please do check my github profile !!!
 						</h2>
@@ -248,7 +248,7 @@ Welcome Slider
 							<div class="icon-box">
 								<i class="tf-anchor2"></i>
 							</div>
-							<!-- Express About Yourself -->
+							 Express About Yourself -->
 							<!-- <div class="content text-center">
 								<h3>We're Genius</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos</p>
@@ -310,7 +310,7 @@ Welcome Slider
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<div class="Resume" >Resume/CV</div>
+				<div class="Resume" >Resume</div>
 				<!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis tenetur odio impedit incidunt? <br> Omnis accusantium ea reiciendis, fugit commodi nostrum.</p> -->
 				<a href="https://drive.google.com/file/d/1T9SwOnbu6Cv8J7synsZnEhbo2UhZJWpr/view" class="btn btn-main">View Resume</a>
 			</div>
@@ -392,7 +392,7 @@ Welcome Slider
 				
 		</div> 		
 	</div>   	
-</section>   <!-- End section -->      -->
+</section>    End section -->     
 	
 
 <!-- Start Team Skills
@@ -412,7 +412,7 @@ Welcome Slider
 				</div>  		<!-- End row -->
 				<div class="row">
 					<div class="col-md-6">
-						<h3>I’ve skilled in wide range of web development and <br>
+						<h3 style="font-size : 20px;">I’ve skilled in wide range of web development and <br>
 							Competitive Programming. I have started my whole Programming Journey with Competitive Programming
 							and I am passionate about it. I currently exploring Full Stack development (majorly <span class="color">MERN Stack</span>)
 						</h3>
@@ -430,7 +430,7 @@ Welcome Slider
 					<div class="col-md-6">
 						<ul class="skill-bar">
 							<li>
-								<p><span></span> Data Structures/Algorithms</p>
+								<p><span></span> Data Structures + Algorithms</p>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="70"
 									aria-valuemin="0" aria-valuemax="100" style="width:80%">
