--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 Welcome Slider
 ==================================== -->
 
-<section class="hero-area overlay" style="background-image: url('./images/pexels-aleksandar-pasaric-325185.jpg');">
+<section class="hero-area overlay" style="background-image: url('./images/2584599.jpg');">
 	<!-- <video autoplay muted loop class="hero-video">
 		<source src="images/banner/hero-video.mp4" type="video/mp4">
 	</video> -->
 	<div class="block"  >
-		<h2> Hello!</h2>
+		<!-- <h2> Hello!</h2> -->
 		<h1>I'm Samartha </h1>
 		<!-- <h2>CS undergrad</h2> -->
 		<!-- <h2>Competitive Programmer</h2> -->
