--- a/index.html
+++ b/index.html
@@ -417,11 +417,11 @@ Welcome Slider
 							and I am passionate about it. I currently exploring Full Stack development (majorly <span class="color">MERN Stack</span>)
 						</h3>
 
-						<h3>
+						<h3 style="font-size : 20px;">
 							I have also explored container Technology and currently Working with Docker.
 							I have significant Knowledge in both SQL and NoSQL databases.
 						</h3>
-						<h3>
+						<h3 style="font-size : 20px;">
 							I have built multiple projects around my skills and Experiences.
 						</h3>
 
@@ -946,7 +946,7 @@ Start Our Team
 				<h1>Contact Details</h1>
 <!-- I'm available on Facebook, LinkedIn and Quora. Mails and LinkedIn are the best way to communicate though. You can reach out to me on on my coding profiles too. -->
 
-				<h3> I'm available on Facebook, LinkedIn and Quora. <span class="color" >Mails</span> and <span class="color" >Linkedin</span> are the best way to communicate though. You can reach
+				<h3 style="font-size : 20px;"> I'm available on Facebook, LinkedIn and Quora. <span class="color" >Mails</span> and <span class="color" >Linkedin</span> are the best way to communicate though. You can reach
 				out to me on on my coding profiles too. </h3>
 				<div class="contact-details">
 					<div class="con-info clearfix">
