made some small update

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ Welcome Slider
 
 <!-- Start Call To Action 
 ==================================== -->
-<section class="call-to-action section-sm bg-1 overly"  id = "Resumeid">
+<!-- <section class="call-to-action section-sm bg-1 overly"  id = "Resumeid">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 text-center">
@@ -316,7 +316,7 @@ Welcome Slider
 			</div>
 		</div> 		<!-- End row -->
 	</div>   	<!-- End container -->
-</section>   <!-- End section -->
+</section>    End section -->
 
 <!-- Start Services Section
 ==================================== -->
