--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ Welcome Slider
 				<div class="content-block">
 					<h2>We’re A Digital Design Agency.</h2>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam tempora itaque, autem dolores culpa cum mollitia voluptate nesciunt voluptatibus quasi.</p>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis eveniet vel et mollitia nemo corporis sed ut, exercitationem incidunt, rerum nam doloremque quos ratione doloribus, officiis adipisci error quasi soluta?</p>
+					p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis eveniet vel et mollitia nemo corporis sed ut, exercitationem incidunt, rerum nam doloremque quos ratione doloribus, officiis adipisci error quasi soluta?</p>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, magnam.</p>
 					<div class="row">
 						<div class="col-md-6">
@@ -311,11 +311,11 @@ Welcome Slider
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<div class="Resume" >Resume</div>
-				<!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis tenetur odio impedit incidunt? <br> Omnis accusantium ea reiciendis, fugit commodi nostrum.</p> -->
+				 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis tenetur odio impedit incidunt? <br> Omnis accusantium ea reiciendis, fugit commodi nostrum.</p> 
 				<a href="https://drive.google.com/file/d/1T9SwOnbu6Cv8J7synsZnEhbo2UhZJWpr/view" class="btn btn-main">View Resume</a>
 			</div>
-		</div> 		<!-- End row -->
-	</div>   	<!-- End container -->
+		</div> 		<End row
+	</div>   	
 </section>    End section -->
 
 <!-- Start Services Section
